--- a/app/templates/reply_guy/index.html
+++ b/app/templates/reply_guy/index.html
@@ -219,6 +219,10 @@
                                     
                                     <div class="tweet-engagement">
                                         <div class="engagement-stat">
+                                            <i class="ph ph-chat-circle" style="color: #8b5cf6;"></i>
+                                            {{ tweet.engagement.replies }}
+                                        </div>
+                                        <div class="engagement-stat">
                                             <i class="ph ph-heart" style="color: #ef4444;"></i>
                                             {{ tweet.engagement.likes }}
                                         </div>
